--- a/app/src/main/res/layout/activity_all_lessons.xml
+++ b/app/src/main/res/layout/activity_all_lessons.xml
@@ -5,5 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Lesson.AllLessonsActivity">
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/lessons_recyclerview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:listitem="@layout/lesson_iten">
 
+
+    </androidx.recyclerview.widget.RecyclerView>
 </androidx.constraintlayout.widget.ConstraintLayout>
