--- a/app/src/main/res/layout/activity_lesson_adder.xml
+++ b/app/src/main/res/layout/activity_lesson_adder.xml
@@ -13,9 +13,9 @@
         android:ems="10"
         android:hint="Lesson Name"
         android:inputType="textPersonName"
-        app:layout_constraintEnd_toEndOf="@+id/lesson_id"
-        app:layout_constraintStart_toStartOf="@+id/lesson_id"
-        app:layout_constraintTop_toBottomOf="@+id/lesson_id" />
+        app:layout_constraintEnd_toEndOf="@+id/lesson_item_id"
+        app:layout_constraintStart_toStartOf="@+id/lesson_item_id"
+        app:layout_constraintTop_toBottomOf="@+id/lesson_item_id" />
 
     <Button
         android:id="@+id/add_lesson_btn"
@@ -28,7 +28,7 @@
         app:layout_constraintTop_toBottomOf="@+id/lesson_name" />
 
     <EditText
-        android:id="@+id/lesson_id"
+        android:id="@+id/lesson_item_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
