--- a/app/src/main/res/layout/activity_add_lesson_to_student.xml
+++ b/app/src/main/res/layout/activity_add_lesson_to_student.xml
@@ -6,27 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".Student.AddLessonToStudentActivity">
 
-    <EditText
-        android:id="@+id/lesson_to_be_added_to_student"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/lessons_to_add_recyclerview"
+        android:layout_width="320dp"
+        android:layout_height="394dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:listitem="@layout/student_item"/>
 
-    <Button
-        android:id="@+id/add_lesson_to_student_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="add"
-        app:layout_constraintEnd_toEndOf="@+id/lesson_to_be_added_to_student"
-        app:layout_constraintStart_toStartOf="@+id/lesson_to_be_added_to_student"
-        app:layout_constraintTop_toBottomOf="@+id/lesson_to_be_added_to_student" />
 </androidx.constraintlayout.widget.ConstraintLayout>
