--- a/app/src/main/res/layout/activity_student_details.xml
+++ b/app/src/main/res/layout/activity_student_details.xml
@@ -41,7 +41,10 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
         android:text="Lessons:"
+        android:textSize="18dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline5" />
 
@@ -52,15 +55,16 @@
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.30779755" />
 
-    <TextView
-        android:id="@+id/student_lesson_name"
-        android:layout_width="54dp"
-        android:layout_height="17dp"
-        android:layout_marginStart="48dp"
-        android:text="TextView"
-        app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
-        app:layout_constraintStart_toEndOf="@+id/textView3" />
-
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/student_lessons_recyclerview"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/guideline6"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView3"
+        tools:listitem="@layout/student_item" />
     <Button
         android:id="@+id/add_lesson_to_student_btn"
         android:layout_width="wrap_content"
@@ -72,4 +76,11 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.875513" />
 </androidx.constraintlayout.widget.ConstraintLayout>
