Final v1.2: To be sent

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,8 @@
         android:layout_height="171dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
+        android:background="@color/lb_action_text_color"
+        android:backgroundTint="@color/lb_action_text_color"
         android:scaleType="fitXY"
         android:src="@drawable/students"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -27,6 +29,8 @@
         android:layout_height="171dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
+        android:background="@color/lb_action_text_color"
+        android:backgroundTint="@color/lb_action_text_color"
         android:scaleType="fitXY"
         android:src="@drawable/student_add"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -47,6 +51,8 @@
         android:layout_width="163dp"
         android:layout_height="171dp"
         android:layout_marginRight="10dp"
+        android:background="@color/lb_action_text_color"
+        android:backgroundTint="@color/lb_action_text_color"
         android:scaleType="fitXY"
         android:src="@drawable/add_lesson_img"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -61,6 +67,8 @@
         android:layout_height="171dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
+        android:background="@color/lb_action_text_color"
+        android:backgroundTint="@color/lb_action_text_color"
         android:scaleType="fitXY"
         android:src="@drawable/lessons"
         app:layout_constraintBottom_toBottomOf="parent"
