--- a/app/src/main/res/layout/activity_lesson_adder.xml
+++ b/app/src/main/res/layout/activity_lesson_adder.xml
@@ -37,7 +37,7 @@
         android:layout_marginBottom="8dp"
         android:ems="10"
         android:hint="Id"
-        android:inputType="textPersonName"
+        android:inputType="number"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
